--- a/snake.html
+++ b/snake.html
@@ -14,4 +14,45 @@
 	xv = yv = 0;
 	trail = [];
 	tail = 5;
+
+	game = () => {
+		px += xv;
+		py += yv;
+		if (px < 0) {
+			px = tc - 1;
+		}
+		if (px > tv - 1) {
+			px = 0;
+		}
+		if (py < 0) {
+			py = tc - 1;
+		}
+		if (py < tv - 1) {
+			py = 0;
+		}
+		ctx.fillStyle = "black";
+		ctx.fillRect(0, 0, canv.width, canv.height);
+
+		ctx.fillStyle = "lime";
+
+		for (let i = 0; i < trail.length; i++) {
+			ctx.fillRect(trail[i].x * gs, trail[i].y * gs, gs - 2, gs - 2);
+			if (trail[i].x == px && trail[i].y == py) {
+				trail = 5;
+			}
+		}
+
+		trail.push({ x: px, y: py });
+		while (trail.length > tail) {
+			trail.shift();
+		}
+
+		if (ax == px && ay == py) {
+			tail++;
+			ax = Math.floor(Math.randon() * tc);
+			ay = Math.floor(Math.random() * tc);
+		}
+		ctx.fillStyle = "red";
+		ctx.fillRect(ax * gs, ay * gs, gs - 2, gs - 2);
+	};
 </script>
