--- a/snake.html
+++ b/snake.html
@@ -54,5 +54,29 @@
 		}
 		ctx.fillStyle = "red";
 		ctx.fillRect(ax * gs, ay * gs, gs - 2, gs - 2);
+
+		function keyPush(event) {
+			switch (event.keyCode) {
+				case 37:
+					xv = -1;
+					yv = 0;
+					break;
+
+				case 38:
+					xv = 0;
+					yv = -1;
+					break;
+
+				case 39:
+					xv = 1;
+					yv = 0;
+					break;
+
+				case 40:
+					xv = 0;
+					yv = 1;
+					break;
+			}
+		}
 	};
 </script>
