basic function working

--- a/snake.html
+++ b/snake.html
@@ -15,33 +15,32 @@
 	trail = [];
 	tail = 5;
 
-	game = () => {
+	function game() {
 		px += xv;
 		py += yv;
 		if (px < 0) {
 			px = tc - 1;
 		}
-		if (px > tv - 1) {
+		if (px > tc - 1) {
 			px = 0;
 		}
 		if (py < 0) {
 			py = tc - 1;
 		}
-		if (py < tv - 1) {
+		if (py > tc - 1) {
 			py = 0;
 		}
+
 		ctx.fillStyle = "black";
 		ctx.fillRect(0, 0, canv.width, canv.height);
 
 		ctx.fillStyle = "lime";
-
-		for (let i = 0; i < trail.length; i++) {
+		for (var i = 0; i < trail.length; i++) {
 			ctx.fillRect(trail[i].x * gs, trail[i].y * gs, gs - 2, gs - 2);
 			if (trail[i].x == px && trail[i].y == py) {
-				trail = 5;
+				tail = 5;
 			}
 		}
-
 		trail.push({ x: px, y: py });
 		while (trail.length > tail) {
 			trail.shift();
@@ -49,34 +48,33 @@
 
 		if (ax == px && ay == py) {
 			tail++;
-			ax = Math.floor(Math.randon() * tc);
+			ax = Math.floor(Math.random() * tc);
 			ay = Math.floor(Math.random() * tc);
 		}
 		ctx.fillStyle = "red";
 		ctx.fillRect(ax * gs, ay * gs, gs - 2, gs - 2);
+	}
+	function keyPush(evt) {
+		switch (evt.keyCode) {
+			case 37:
+				xv = -1;
+				yv = 0;
+				break;
 
-		function keyPush(event) {
-			switch (event.keyCode) {
-				case 37:
-					xv = -1;
-					yv = 0;
-					break;
+			case 38:
+				xv = 0;
+				yv = -1;
+				break;
 
-				case 38:
-					xv = 0;
-					yv = -1;
-					break;
+			case 39:
+				xv = 1;
+				yv = 0;
+				break;
 
-				case 39:
-					xv = 1;
-					yv = 0;
-					break;
-
-				case 40:
-					xv = 0;
-					yv = 1;
-					break;
-			}
+			case 40:
+				xv = 0;
+				yv = 1;
+				break;
 		}
-	};
+	}
 </script>
